# universal-ai-tools

./: .autoheal.yml  .cspell.json  .cursorrules  .dockerignore  .editorconfig  .env  .env.ab-mcts.example  .env.docker.example  .env.example  .env.jwt  .env.local  .env.production  .env.production.template  .env.supabase  .env.template  .env.test  .eslintignore  .eslintrc.autofix.json  .eslintrc.cjs  .eslintrc.development.json  .eslintrc.js  .eslintrc.json  .eslintrc.production.js  .eslintrc.quality.js  .eslintrc.simple.json  .eslintrc.tests.cjs  .gitattributes  .gitignore  .gitignore.additions  .gitlab-ci.yml  .gitlabs-config  .gitleaks.toml  .gitleaksignore  .jest-skip  .lintstagedrc.json  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .puppeteerrc.cjs  (+969 more)
.claude/: hooks.json  (+2 more)
crates/agent-orchestrator/: Cargo.toml  ENHANCED_ORCHESTRATION_GUIDE.md
crates/agent-orchestrator/examples/: enhanced_orchestration_demo.rs
crates/agent-orchestrator/src/: agent.rs  context.rs  context_propagation.rs  dynamic_workflow.rs  enhanced_orchestrator.rs  execution.rs  lib.rs  mcts.rs  memory.rs  monitor.rs  optimizer.rs  recovery.rs  recursion.rs  strategy.rs  workflow.rs
crates/agent-orchestrator/tests/: context_propagation_tests.rs  dynamic_workflow_tests.rs  enhanced_orchestrator_tests.rs  integration_tests.rs  recursion_tests.rs
crates/ai-orchestration-platform/: Cargo.toml
crates/ai-orchestration-platform/src/: enhanced_orchestration.rs  evolutionary_algorithms.rs  intelligent_orchestration.rs  lib.rs  multi_hop_orchestration.rs  simple_evolutionary.rs  simple_multi_hop.rs
crates/assistantd/: Cargo.toml  Dockerfile  README.md
crates/assistantd/src/: feedback.rs  lib.rs  main.rs  rag.rs  rag_provider.rs  simple_cache.rs  simple_memory.rs
crates/assistantd/tests/: health.rs  multi_hop_test.rs
crates/bmad-workflow/: Cargo.toml
crates/bmad-workflow/src/: agents.rs  artifacts.rs  context.rs  development.rs  lib.rs  planning.rs  workflow.rs
crates/chat-action-detector/: Cargo.toml
crates/chat-action-detector/src/: main.rs
crates/dashboard-system/: Cargo.toml
crates/fast-llm-coordinator/: Cargo.toml  build.rs  test-integration.js
crates/fast-llm-coordinator/examples/: coordinator_benchmark.rs
crates/fast-llm-coordinator/src/: coordinator.rs  lib.rs  load_balancer.rs  metrics.rs  napi_bridge.rs  routing.rs  services.rs
crates/intelligent-librarian/: Cargo.toml
crates/intelligent-librarian/src/: agent_integration.rs  api.rs  classifier.rs  content_analyzer.rs  curator.rs  embeddings.rs  knowledge_graph.rs  lib.rs  main.rs  models.rs  quality_assessor.rs  searcher.rs  storage.rs  tests.rs
crates/librarian-coordinator/: Cargo.toml
crates/librarian-coordinator/src/: main.rs
crates/llm-router/: Cargo.toml  Dockerfile  README.md
crates/llm-router/benches/: router_benchmark.rs
crates/llm-router/src/: cache.rs  config.rs  context.rs  context_degradation.rs  context_manager.rs  edge_cases.rs  guardrails.rs  health.rs  intelligent_cache.rs  keychain.rs  lib.rs  librarian_context.rs  main.rs  metrics.rs  models.rs  providers.rs  router.rs  service_integration.rs  smart_monitoring.rs  smart_router.rs  streaming.rs  test_context.rs  token_manager.rs  unlimited_context.rs
crates/llm-router/tests/: health.rs
crates/monitoring-system/: Cargo.toml
crates/monitoring-system/src/: lib.rs
crates/parameter-analytics/: Cargo.toml  build.rs
crates/parameter-analytics/src/: collector.rs  database.rs  lib.rs  metrics.rs  types.rs
crates/redis-service/: Cargo.toml  build.rs
crates/redis-service/examples/: benchmark.rs
crates/redis-service/src/: cache.rs  client.rs  compression.rs  fallback.rs  lib.rs  metrics.rs  napi_bridge.rs  pool.rs  pubsub.rs  session.rs  types.rs
crates/redis-service/tests/: integration_test.rs
crates/rlvr-service/: Cargo.toml
crates/rlvr-service/src/: advanced_experiments.rs  experience.rs  experiment_main.rs  generator.rs  http_main.rs  http_server.rs  lib.rs  main.rs  metrics.rs  minimal_server.rs  mock_generator.rs  mock_llm.rs  models.rs  server.rs  simple_http_server.rs  simple_server.rs  tests.rs  trainer.rs  verifier.rs
crates/rust-auth-service/: Cargo.toml
crates/rust-auth-service/src/: auth.rs  error.rs  handlers.rs  lib.rs  middleware.rs  models.rs  server.rs  store.rs
crates/rust-llm-service/: Cargo.toml  build.rs
crates/rust-llm-service/src/: error.rs  lib.rs  llm_coordinator.rs  metrics.rs  models.rs  providers.rs  routing.rs
crates/testing-framework/: Cargo.toml
crates/testing-framework/src/: lib.rs
crates/vector-db/: Cargo.toml  Dockerfile  README.md
crates/vector-db/src/: main.rs  storage.rs
crates/vision-processor/: Cargo.toml
crates/vision-processor/src/: lib.rs  main.rs
crates/vision-resource-manager/: Cargo.toml  package.json
crates/vision-resource-manager/examples/: standalone_benchmark.rs
crates/vision-resource-manager/src/: lib.rs  napi_bridge.rs  simple.rs  task_queue.rs
crates/vision-resource-manager/vision-resource-manager.disabled/: Cargo.toml
crates/vision-service/: Cargo.toml  Dockerfile  README.md
crates/vision-service/src/: main.rs
crates/vm-coding-agent/: Cargo.toml  README.md
crates/vm-coding-agent/src/: lib.rs  main.rs  orchestrator_integration.rs
crates/voice-processing/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
crates/voice-processing/src/: audio.rs  lib.rs  napi_impl.rs  session.rs  speech.rs  utils.rs
rust-ai-core/: Cargo.toml  Dockerfile
rust-ai-core/ai-engine/: Cargo.toml
rust-ai-core/ai-engine/src/: health.rs  lib.rs
rust-ai-core/graphrag-core/: Cargo.toml
rust-ai-core/graphrag-core/src/: communities.rs  entities.rs  lib.rs  relationships.rs
rust-ai-core/memory-optimizer/: Cargo.toml
rust-ai-core/memory-optimizer/src/: lib.rs  monitor.rs  pressure_detector.rs
rust-services/ab-mcts-service/: Cargo.toml  DEPLOYMENT_COMPLETE.md  Dockerfile  docker-compose.yml
rust-services/ab-mcts-service/benches/: performance_benchmarks.rs
rust-services/ab-mcts-service/config/: production.json
(+9756 files in other folders)
