[project]
name = "universal-ai-tools"
version = "1.0.0"
description = "Universal AI Tools - Multi-model LLM platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

# Forbid imports that bypass proper module structure
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Allow api.* imports only in these files
"src/api/api_server.py" = ["TID252"]
"src/api/*_routes.py" = ["TID252"]
"api/app.py" = ["TID252"]
