[package]
name = "agent-orchestrator"
version = "0.2.0"
edition = "2021"
description = "Advanced AI Agent Orchestration with AB-MCTS and Hierarchical Workflows"
authors = ["Universal AI Tools"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rand = "0.8"
priority-queue = "2.0"
petgraph = "0.6"
ndarray = "0.15"
rayon = "1.10"
lru = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
prometheus = "0.13"
tonic = { version = "0.12", features = ["gzip"] }
prost = "0.13"
clap = { version = "4.5", features = ["derive"] }

# Local crates
fast-llm-coordinator = { path = "../fast-llm-coordinator" }
# llm-router = { path = "../llm-router" }  # Temporarily disabled due to compilation errors

[features]
default = ["redis-cache"]
redis-cache = ["redis"]
distributed = []
gpu-acceleration = []

[build-dependencies]
tonic-build = "0.12"
