[package]
name = "bmad-workflow"
version = "0.1.0"
edition = "2021"
authors = ["Universal AI Tools Team"]
description = "BMAD (Breakthrough Method for Agile AI-Driven Development) Workflow System"
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"

# Async HTTP client for MCP integration
reqwest = { version = "0.11", features = ["json"] }

# For future LLM integration
# openai = "0.1"  # Commented out - version yanked

[dev-dependencies]
tokio-test = "0.4"
