[package]
name = "fast-llm-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
dashmap = "5.5"
arc-swap = "1.6"
once_cell = "1.19"
crossbeam = "0.8"

# HTTP client features
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# NAPI bindings for Node.js integration
napi = { version = "2.0", features = ["full"] }
napi-derive = "2.0"

# Performance and monitoring
metrics = "0.21"
histogram = "0.6"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"

[build-dependencies]
napi-build = "2.0"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[[example]]
name = "coordinator_benchmark"
path = "examples/coordinator_benchmark.rs"