[package]
name = "redis-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
dashmap = "5.5"
arc-swap = "1.6"
once_cell = "1.19"
crossbeam = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"

# Redis client
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "cluster"] }

# In-memory cache with TTL support
moka = { version = "0.12", features = ["future"] }

# NAPI bindings for Node.js integration
napi = { version = "2.0", features = ["full"], optional = true }
napi-derive = { version = "2.0", optional = true }

# Performance and monitoring
# metrics = "0.21"
# histogram = "0.6"

# Serialization and compression
bincode = "1.3"
lz4 = "1.24"
zstd = "0.13"

# Connection pooling
deadpool-redis = "0.14"

[build-dependencies]
napi-build = "2.0"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
clustering = ["redis/cluster-async"]
compression = []
examples = []

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
required-features = ["examples"]
