[package]
name = "rlvr-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
dashmap = "5.5"
parking_lot = "0.12"
async-trait = "0.1"

[[bin]]
name = "rlvr-service"
path = "src/main.rs"

[[bin]]
name = "rlvr-experiments"
path = "src/experiment_main.rs"

[[bin]]
name = "rlvr-http-server"
path = "src/http_main.rs"

[dev-dependencies]
tokio-test = "0.4"
