[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bcrypt = "0.15"
jsonwebtoken = "9.2"
thiserror = "1.0"
dashmap = "5.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"

# Optional NAPI bridge for Node.js integration
[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies.napi]
version = "2.16"
optional = true

[dependencies.napi-derive]  
version = "2.16"
optional = true

[dependencies.napi-build]
version = "2.1"
optional = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-auth-server"
path = "src/server.rs"