[package]
name = "rust-llm-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
# Core dependencies
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async and concurrency
parking_lot = "0.12"
dashmap = "6.0"
arc-swap = "1.7"

# Performance and metrics
metrics = "0.21"
metrics-util = "0.15"

# NAPI bindings (optional for Node.js integration)
napi = { version = "2.16", optional = true }
napi-derive = { version = "2.16", optional = true }

[build-dependencies]
napi-build = { version = "2.2", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3