[package]
name = "vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector operations
nalgebra = "0.32"
ndarray = "0.15"
hnsw = "0.11"
faiss = { version = "0.12", optional = true }

# Embedding models
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = { version = "0.15", features = ["http"] }
hf-hub = "0.3"

# Storage
rocksdb = "0.21"
bincode = "1.3"
lmdb = "0.9"

# Utilities
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
rayon = "1.8"
num_cpus = "1.16"
parking_lot = "0.12"
crossbeam = "0.8"
flate2 = "1.0"
dotenv = "0.15"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

[features]
default = ["hnsw-index"]
hnsw-index = []
faiss-index = ["faiss"]
cuda = ["candle-core/cuda"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "vector_search"
harness = false