[package]
name = "vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

# Vector-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nalgebra = "0.32"
ndarray = "0.15"
hnsw = "0.11"
faiss = { version = "0.12", optional = true }
tokenizers = { version = "0.15", features = ["http"] }

# Storage
rocksdb = "0.21"
bincode = "1.3"
lmdb = "0.8"

# Utilities  
rayon = "1.8"
num_cpus = "1.16"
parking_lot = "0.12"
crossbeam = "0.8"
flate2 = "1.0"
dotenv = "0.15"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

[features]
default = ["hnsw-index"]
hnsw-index = []
faiss-index = ["faiss"]
cuda = ["candle-core/cuda"]

[dev-dependencies]
criterion = { workspace = true }
approx = "0.5"
