[package]
name = "vision-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
image = "0.24"
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = "0.3"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"

[features]
default = []
metal = ["candle-core/metal"]
cuda = ["candle-core/cuda"]