[package]
name = "vision-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

# Vision-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
image = "0.24"
bytes = "1.5"
dotenv = "0.15"

[dev-dependencies]
criterion = { workspace = true }
