[package]
name = "vm-coding-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous Virtual Machine and Code Generation Agent"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Local agent orchestrator integration
agent-orchestrator = { path = "../agent-orchestrator" }

[dev-dependencies]
tokio-test = "0.4"
