[package]
name = "voice-processing"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Universal AI Tools Team"]
description = "High-performance voice processing native extension"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.2.3"

[dependencies]
# Node.js bindings
napi = { version = "2.16", features = ["napi8"] }
napi-derive = "2.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }